SERVER-21956 DBClientCursor should propagate the correct exception code